--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -16,71 +16,59 @@
 - Prevent the use of harmful hard drugs
 
 # Stack
-| Substance                           | Amount   | When?        | ROA  | Purpose                                                  |
-| ----------------------------------- | -------- | ------------ | ---- | -------------------------------------------------------- |
-| Multivitamin (26 nutrients)         | 1 pill   | Breakfast    | Oral | RDA                                                      |
-| Calcium                             | 800mg    | Breakfast    | Oral | RDA                                                      |
-| Magnesium Orotate                   | 750mg    | Breakfast    | Oral | RDA                                                      |
-| Creatine                            | 5g       | Breakfast    | Oral | Cognitive enhancement, RDA                               |
-| AlphaGPC                            | 1g       | Breakfast    | Oral | Cognitive enhancement, RDA                               |
-| Metformin                           | 500mg    | Breakfast    | Oral | Longevity                                                |
-| Quercetine                          | 500mg    | Breakfast    | Oral | Longevity                                                |
-| Glucosamine                         | 888mg    | Breakfast    | Oral | Longevity, joint health                                  |
-| Spironolactone                      | 200mg    | Breakfast    | Oral | GD                                                       |
-| Estradiol Valerate                  | 2mg      | Breakfast    | Oral | GD                                                       |
-| Cod liver oil                       | 2g       | Breakfast    | Oral | Schizophrenia, RDA, longevity                            |
-| Boron                               | 10mg     | Breakfast    | Oral | GD                                                       |
-| Ginko Biloba 50:1 extract from 12g  | 1 pill   | Breakfast    | Oral | Schizophrenia                                            |
-| Resveratrol                         | 1g       | Breakfast    | Oral | Longevity                                                |
-| NMN                                 | 1g       | Breakfast    | Oral | Longevity                                                |
-| Tumeric 50:1 extract (95% curcumin) | 3g       | Breakfast    | Oral | Longevity                                                |
-| Ginger 20:1 extract                 | 100mg    | Breakfast    | Oral | Fat-soluble compound absorption                          |
-| Black pepper 4:1 extract            | 20mg     | Breakfast    | Oral | Fat-soluble compound absorption                          |
-| Avocado oil (oleic acid)            | 1g       | Breakfast    | Oral | Longevity                                                |
-| Asprin                              | 75mg     | Breakfast    | Oral | Illness prevention (heart attacks and strokes)           |
-| Rhodiola Rosea                      | 1g       | Breakfast    | Oral | Stress resistance                                        |
-| Selegiline                          | 5mg      | Breakfast    | Oral | Cognitive enhancement                                    |
-| Probiotics complex                  | 1 pill   | Breakfast    | Oral | Schizophrenia, cognitive and mood enhancement            |
-| L-Carnosine                         | 1g       | Breakfast    | Oral | Longevity                                                |
-| Astaxanthin                         | 15mg     | Breakfast    | Oral | Cognitive enhancement, longevity, skin health            |
-| Spermidine                          | 10mg     | Breakfast    | Oral | Longevity                                                |
-| Bromantane                          | 25mg     | Breakfast    | Oral | Cognitive enhancement                                    |
-| Coluracetam                         | 10mg     | Breakfast    | Oral | Cognitive enhancement                                    |
-| Sarcosine                           | 2g       | Breakfast    | Oral | Schizophrenia                                            |
-| NAC                                 | 2g       | Breakfast    | Oral | Longevity, schizophrenia                                 |
-| Taurine                             | 2g       | Breakfast    | Oral | Longevity, schizophrenia                                 |
-| Glycine                             | 4g       | Breakfast    | Oral | Schizophrenia, longevity                                 |
-| L-Tyrosine                          | 4g       | Breakfast    | Oral | Schizophrenia                                            |
-| Lemon Balm                          | 1g       | Breakfast    | Oral | Anxiety                                                  |
-| Potassium citrate                   | 2g       | Breakfast    | Oral | RDA                                                      |
-| CoQ10                               | ?        | Breakfast    | Oral | Longevity                                                |
-| Coffee                              | 1 tsp    | Breakfast    | Oral | Longevity                                                |
-| PQQ                                 | 20mg     | Breakfast    | Oral | Longevity, schizophrenia                                 |
-| Nefiracetam                         | 200mg    | Breakfast    | Oral | Cognitive enhancement                                    |
-| Olanzapine                          | 5mg      | Breakfast    | Oral | Schizophrenia                                            |
-| L-Tryptophan                        | 2g       | Breakfast    | Oral | Schizophrenia, mood and cognitive enhancement            |
-| Lemon Balm                          | 1g       | Lunch        | Oral | Anxiety                                                  |
-| Taurine                             | 2g       | Lunch        | Oral | Longevity, schizophrenia                                 |
-| Rhodiola Rosea                      | 1g       | Lunch        | Oral | Stress resistance                                        |
-| Coffee                              | 1 tsp    | Lunch        | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
-| L-Carnosine                         | 1g       | Lunch        | Oral | Longevity                                                |
-| AlphaGPC                            | 1g       | Lunch        | Oral | Cognitive enhancement                                    |
-| PQQ                                 | 20mg     | Lunch        | Oral | Longevity, schizophrenia                                 |
-| Nefiracetam                         | 200mg    | Lunch        | Oral | Cognitive enhancement                                    |
-| Tumeric 50:1 extract (95% curcumin) | 3g       | Lunch        | Oral | Longevity                                                |
-| Ginger 20:1 extract                 | 100mg    | Lunch        | Oral | Fat-soluble compound absorption                          |
-| Black pepper 4:1 extract            | 20mg     | Lunch        | Oral | Fat-soluble compound absorption                          |
-| L-Tryptophan                        | 2g       | Lunch        | Oral | Schizophrenia, mood and cognitive enhancement            |
-| L-Tryptophan                        | 2g       | Dinner       | Oral | Schizophrenia, mood and cognitive enhancement            |
-| Spironolactone                      | 200mg    | Dinner       | Oral | GD                                                       |
-| Estradiol Valerate                  | 2mg      | Dinner       | Oral | GD                                                       |
-| Coffee                              | 0.5 tsp  | Dinner       | Oral | Cognitive and mood enhancement, illness prevention (CVD) |
-| Bromantane                          | 25mg     | Dinner       | Oral | Cognitive enhancement                                    |
-| Coluracetam                         | 10mg     | Dinner       | Oral | Cognitive enhancement                                    |
-| Nefiracetam                         | 200mg    | Dinner       | Oral | Cognitive enhancement                                    |
-| Tumeric 50:1 extract (95% curcumin) | 3g       | Dinner       | Oral | Longevity                                                |
-| Ginger 20:1 extract                 | 100mg    | Dinner       | Oral | Fat-soluble compound absorption                          |
-| Black pepper 4:1 extract            | 20mg     | Dinner       | Oral | Fat-soluble compound absorption                          |
-| Melatonin                           | 3mg      | Before bed   | Oral | Mood enhancement, stress resistance                      |
-| Kratom                              | 0.7-1.4g | Every hour   | Oral | Mood, addiction                                          |
-| DMHA                                | 200mg    | Occasionally | Oral | Cognitive and mood enhancement                           |
+| Substance                          | Amount             | When?                          | ROA  | Purpose                                                |
+| ---------------------------------- | ------------------ | ------------------------------ | ---- | ------------------------------------------------------ |
+| Multivitamin (26 nutrients)        | 1 pill             | Breakfast                      | Oral | RDA                                                    |
+| Calcium                            | 800mg              | Breakfast                      | Oral | RDA                                                    |
+| Magnesium Orotate                  | 750mg              | Breakfast                      | Oral | RDA                                                    |
+| Creatine                           | 5g                 | Breakfast                      | Oral | Cognitive enhancement, RDA                             |
+| AlphaGPC                           | 1g                 | Breakfast                      | Oral | Cognitive enhancement, RDA                             |
+| Metformin                          | 500mg              | Breakfast                      | Oral | Longevity                                              |
+| Quercetine                         | 500mg              | Breakfast                      | Oral | Longevity                                              |
+| Glucosamine                        | 888mg              | Breakfast                      | Oral | Longevity, joint health                                |
+| Cod liver oil                      | 2g                 | Breakfast                      | Oral | Schizophrenia, RDA, longevity                          |
+| Boron                              | 10mg               | Breakfast                      | Oral | GD                                                     |
+| Ginko Biloba 50:1 extract from 12g | 1 pill             | Breakfast                      | Oral | Schizophrenia                                          |
+| Resveratrol                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| Liposomal NMNN                     | 500mg              | Breakfast                      | Oral | Longevity                                              |
+| Avocado oil (oleic acid)           | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| Asprin                             | 75mg               | Breakfast                      | Oral | Illness prevention (heart attacks and strokes)         |
+| Selegiline                         | 5mg                | Breakfast                      | Oral | Cognitive enhancement                                  |
+| Probiotics complex                 | 1 pill             | Breakfast                      | Oral | Schizophrenia, cognitive and mood enhancement          |
+| L-Carnosine                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| Astaxanthin                        | 15mg               | Breakfast                      | Oral | Cognitive enhancement, longevity, skin health          |
+| Spermidine                         | 10mg               | Breakfast                      | Oral | Longevity                                              |
+| Bromantane                         | 100mg              | Breakfast                      | Oral | Cognitive enhancement                                  |
+| CoQ10                              | ?                  | Breakfast                      | Oral | Longevity                                              |
+| PQQ                                | 20mg               | Breakfast                      | Oral | Longevity, schizophrenia                               |
+| Fisetin                            | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| Lithium aspartate                  | 1g                 | Breakfast                      | Oral | Mood stabilisation, longevity                          |
+| Memantine                          | 10mg               | Breakfast                      | Oral | Kratom tolerance prevention/reduction, neuroprotection |
+| L-Carnosine                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| AlphaGPC                           | 1g                 | Breakfast                      | Oral | Cognitive enhancement                                  |
+| Liposomal NMNN                     | 500mg              | Lunch                          | Oral | Longevity                                              |
+| PQQ                                | 20mg               | Lunch                          | Oral | Longevity, schizophrenia                               |
+| Bromantane                         | 100mg              | Lunch                          | Oral | Cognitive enhancement                                  |
+| Melatonin                          | 3mg                | Before bed                     | Oral | Mood enhancement, stress resistance                    |
+| Kratom                             | 4-8g/20-30g total  | Over the day                   | Oral | Mood, relapse prevention                               |
+| Modafinil                          | 200mg/1-1.5g total | Over the first 8 hours         | Oral | Motivation, cognitive enhancement                      |
+| L-Tryptophan                       | 1.5g               | 4 times a day                  | Oral | Schizophrenia, mood and cognitive enhancement          |
+| L-Tyrosine                         | 1.5g               | 4 times a day                  | Oral | Schizophrenia, mood and cognitive enhancement          |
+| Tumeric                            | 500mg              | 4 times a day                  | Oral | Longevity                                              |
+| Black pepper                       | 500mg              | 4 times a day                  | Oral | Longevity, kratom and modafinil potentiation           |
+| Rhodiola Rosea                     | 500mg              | 4 times a day                  | Oral | Stress resistance                                      |
+| Glycine                            | 2.5g               | 4 times a day                  | Oral | Schizophrenia, longevity                               |
+| Sarcosine                          | 500mg              | 4 times a day                  | Oral | Schizophrenia                                          |
+| Coffee                             | 4-6 cups           | Over the first 12 hours        | Oral | Longevity, cognitive enhancement, mood enhancement     |
+| Taurine                            | 500mg              | 4 times a day                  | Oral | Longevity, schizophrenia                               |
+| NAC                                | 500mg              | 4 times a day                  | Oral | Longevity, schizophrenia                               |
+| Coluracetam                        | 10-15mg            | 3 times a day                  | Oral | Cognitive enhancement                                  |
+| Nefiracetam                        | 100-200mg          | As needed                      | Oral | Cognitive enhancement                                  |
+| Potassium citrate                  | Various            | As needed to ensure RDA is met | Oral | RDA                                                    |
+| Estradiol enthanate                | 10mg               | Every 9 days                   | IM   | GD                                                     |
+| Hydroxyprogesterone caproate       | 500mg              | Every week                     | IM   | GD                                                     |
+
+# Behaviors
+- Cycling 10mins/day on off days, 1hr/day usually
+- Light weight lifting 3 times a week
+- 30 mins yoga nidra every day
