--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -42,7 +42,7 @@
 | CoQ10                              | ?                  | Breakfast                      | Oral | Longevity                                              |
 | PQQ                                | 20mg               | Breakfast                      | Oral | Longevity, schizophrenia                               |
 | Fisetin                            | 1g                 | Breakfast                      | Oral | Longevity                                              |
-| Lithium aspartate                  | 1g                 | Breakfast                      | Oral | Mood stabilisation, longevity                          |
+| Lithium aspartate                  | 20mg                 | Breakfast                      | Oral | Mood stabilisation, longevity                          |
 | Memantine                          | 10mg               | Breakfast                      | Oral | Kratom tolerance prevention/reduction, neuroprotection |
 | L-Carnosine                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
 | AlphaGPC                           | 1g                 | Breakfast                      | Oral | Cognitive enhancement                                  |
