--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -29,7 +29,7 @@
 | Cod liver oil                      | 2g                 | Breakfast                      | Oral | Schizophrenia, RDA, longevity                          |
 | Boron                              | 10mg               | Breakfast                      | Oral | GD                                                     |
 | Ginko Biloba 50:1 extract from 12g | 1 pill             | Breakfast                      | Oral | Schizophrenia                                          |
-| Resveratrol                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
+| Liposomal trans-resveratrol                        | 1g                 | Breakfast                      | Oral | Longevity                                              |
 | Liposomal NMNN                     | 500mg              | Breakfast                      | Oral | Longevity                                              |
 | Avocado oil (oleic acid)           | 1g                 | Breakfast                      | Oral | Longevity                                              |
 | Asprin                             | 75mg               | Breakfast                      | Oral | Illness prevention (heart attacks and strokes)         |
