--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -66,7 +66,7 @@
 | Nefiracetam                        | 100-200mg          | As needed                      | Oral | Cognitive enhancement                                  |
 | Potassium citrate                  | Various            | As needed to ensure RDA is met | Oral | RDA                                                    |
 | Estradiol enthanate                | 10mg               | Every 9 days                   | IM   | GD                                                     |
-| Hydroxyprogesterone caproate       | 500mg              | Every week                     | IM   | GD                                                     |
+| Hydroxyprogesterone caproate       | 1g              | Every 2 week                     | IM   | GD                                                     |
 
 # Behaviors
 - Cycling 10mins/day on off days, 1hr/day usually
