--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -52,15 +52,15 @@
 | Melatonin                          | 3mg                | Before bed                     | Oral | Mood enhancement, stress resistance                    |
 | Kratom                             | 4-8g/20-30g total  | Over the day                   | Oral | Mood, relapse prevention                               |
 | Modafinil                          | 200mg/1-1.5g total | Over the first 8 hours         | Oral | Motivation, cognitive enhancement                      |
-| Tumeric                            | 500mg              | 4 times a day                  | Oral | Longevity                                              |
-| Black pepper                       | 500mg              | 4 times a day                  | Oral | Longevity, kratom and modafinil potentiation           |
+| Tumeric                            | 1g              | 4 times a day                  | Oral | Longevity                                              |
+| Black pepper                       | 1g              | 4 times a day                  | Oral | Longevity, kratom and modafinil potentiation           |
 | Rhodiola Rosea                     | 500mg              | 4 times a day                  | Oral | Stress resistance                                      |
 | Glycine                            | 2.5g               | 4 times a day                  | Oral | Schizophrenia, longevity                               |
 | Sarcosine                          | 500mg              | 4 times a day                  | Oral | Schizophrenia                                          |
 | Coffee                             | 4-6 cups           | Over the first 12 hours        | Oral | Longevity, cognitive enhancement, mood enhancement     |
 | Taurine                            | 500mg              | 4 times a day                  | Oral | Longevity, schizophrenia                               |
 | NAC                                | 500mg              | 4 times a day                  | Oral | Longevity, schizophrenia                               |
-| Coluracetam                        | 10-15mg            | 3 times a day                  | Oral | Cognitive enhancement                                  |
+| Coluracetam                        | 10-15mg            | 4 times a day                  | Oral | Cognitive enhancement                                  |
 | Nefiracetam                        | 100-200mg          | As needed                      | Oral | Cognitive enhancement                                  |
 | Potassium citrate                  | Various            | As needed to ensure RDA is met | Oral | RDA                                                    |
 | Estradiol enthanate                | 10mg               | Every 9 days                   | IM   | GD                                                     |
