--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -51,7 +51,7 @@
 | Bromantane                         | 100mg              | Lunch                          | Oral | Cognitive enhancement                                  |
 | Melatonin                          | 3mg                | Before bed                     | Oral | Mood enhancement, stress resistance                    |
 | Kratom                             | 4-8g/20-30g total  | Over the day                   | Oral | Mood, relapse prevention                               |
-| Modafinil                          | 200mg/1-1.5g total | Over the first 8 hours         | Oral | Motivation, cognitive enhancement                      |
+| Modafinil                          | 200mg/1g total | Over the first 8 hours         | Oral | Motivation, cognitive enhancement                      |
 | Tumeric                            | 1g              | 4 times a day                  | Oral | Longevity                                              |
 | Black pepper                       | 1g              | 4 times a day                  | Oral | Longevity, kratom and modafinil potentiation           |
 | Rhodiola Rosea                     | 500mg              | 4 times a day                  | Oral | Stress resistance                                      |
