--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -15,7 +15,8 @@
 - Improve sleep quality
 - Prevent the use of harmful hard drugs
 
-# Stack
+# Protocol
+## Stack
 | Substance                          | Amount             | When?                          | ROA  | Purpose                                                |
 | ---------------------------------- | ------------------ | ------------------------------ | ---- | ------------------------------------------------------ |
 | Multivitamin (26 nutrients)        | 1 pill             | Breakfast                      | Oral | RDA                                                    |
@@ -66,7 +67,7 @@
 | Estradiol enthanate                | 10mg               | Every 9 days                   | IM   | GD                                                     |
 | Hydroxyprogesterone caproate       | 1g              | Every 2 week                     | IM   | GD                                                     |
 
-# Behaviors
+## Behaviors
 - Cycling 10mins/day on off days, 1hr/day usually
 - Light weight lifting 3 times a week
 - 30 mins yoga nidra every day
