--- a/Stacks/v5.md
+++ b/Stacks/v5.md
@@ -50,7 +50,7 @@
 | Liposomal NMNN                     | 500mg              | Lunch                          | Oral | Longevity                                              |
 | PQQ                                | 20mg               | Lunch                          | Oral | Longevity, schizophrenia                               |
 | Bromantane                         | 100mg              | Lunch                          | Oral | Cognitive enhancement                                  |
-| Melatonin                          | 3mg                | Before bed                     | Oral | Mood enhancement, stress resistance                    |
+| Melatonin                          | 3mg                | 3-4 hours nefore bed                     | Oral | Mood enhancement, stress resistance                    |
 | Kratom                             | 4-8g/20-30g total  | Over the day                   | Oral | Mood, relapse prevention                               |
 | Modafinil                          | 200mg/1g total | Over the first 8 hours         | Oral | Motivation, cognitive enhancement                      |
 | Tumeric                            | 1g              | 4 times a day                  | Oral | Longevity                                              |
